tests/snapshots/tests__pre_reduce_run@sort__radix__radix_sort_lam.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: examples/sort/radix/radix_sort_lam.hvmc
---
#549755289600
pre-reduce:
RWTS   :   1_134_559_385
- ANNI :     622_854_186
- COMM :      28_311_560
- ERAS :     251_658_239
- DREF :     171_966_556
- OPER :      59_768_844
run:
RWTS   :               0
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               0
- OPER :               0
